--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,3 +1,3 @@
-#Tue Sep 23 00:56:11 ART 2008
+#Thu Oct 16 23:34:45 ARST 2008
 eclipse.preferences.version=1
 indexerId=org.eclipse.cdt.core.fastIndexer
