--- a/trunk/.settings/org.eclipse.cdt.core.prefs
+++ b/trunk/.settings/org.eclipse.cdt.core.prefs
@@ -1,5 +1,6 @@
-#Sun Jul 27 22:21:26 ART 2008
+#Mon Jul 28 12:29:24 ART 2008
 eclipse.preferences.version=1
 environment/project/cdt.managedbuild.config.gnu.exe.debug.535446761=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?>\n<environment append\="true" appendContributed\="true"/>\n
 environment/project/cdt.managedbuild.config.gnu.exe.release.522023964=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?>\n<environment append\="true" appendContributed\="true"/>\n
+indexer/indexerId=org.eclipse.cdt.core.fastIndexer
 indexerId=org.eclipse.cdt.core.fastIndexer
